--- a/app/src/main/res/layout/activity_soal_gambar_jawaban_text.xml
+++ b/app/src/main/res/layout/activity_soal_gambar_jawaban_text.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".SoalGambarJawabanTextActivity">
+    tools:context=".ui.SoalGambarJawabanTextActivity">
 
     <ImageView
         android:id="@+id/iv_kresna_logo"
@@ -30,7 +30,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="Soal 1"
+            android:text="@string/soal_1"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textAlignment="center"/>
@@ -104,7 +104,7 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="1"
+                    android:text="@string/option1"
                     android:textSize="42sp"
                     android:textStyle="bold"/>
             </androidx.cardview.widget.CardView>
@@ -129,7 +129,7 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="2"
+                    android:text="@string/option2"
                     android:textSize="42sp"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
@@ -145,6 +145,8 @@
         android:layout_margin="24dp"
         android:background="@drawable/rounded_button_selector"
         android:visibility="invisible"
-        android:text="Lanjut"
+        android:text="@string/lanjut"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textAllCaps="false"/>
 </RelativeLayout>
