--- a/app/src/main/res/layout/activity_soal_text_jawaban_text.xml
+++ b/app/src/main/res/layout/activity_soal_text_jawaban_text.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".SoalTextJawabanTextActivity">
+    tools:context=".ui.SoalTextJawabanTextActivity">
 
     <ImageView
         android:id="@+id/iv_kresna_logo"
@@ -31,7 +31,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="Soal 1"
+            android:text="@string/soal_1"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="24dp"
-                android:text="Ayah membeli Bingka 5 biji, 2 biji Bingka dimakan Ibu, berapa sisa biji Bingka yang ada ?"
+                android:text="@string/soal_1"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
                 android:textStyle="bold" />
@@ -109,7 +109,7 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="1"
+                    android:text="@string/option1"
                     android:textSize="42sp"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
@@ -134,7 +134,7 @@
                     android:layout_margin="2dp"
                     android:background="@color/kresna_cream"
                     android:scaleType="centerInside"
-                    android:text="2"
+                    android:text="@string/option2"
                     android:textSize="42sp"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
@@ -151,6 +151,8 @@
         android:layout_margin="24dp"
         android:background="@drawable/rounded_button_selector"
         android:visibility="invisible"
-        android:text="Lanjut"
+        android:text="@string/lanjut"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textAllCaps="false"/>
 </RelativeLayout>
