--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:animateLayoutChanges="true"
-    tools:context=".SplashActivity">
+    tools:context=".ui.SplashActivity">
 
     <ImageView
         android:id="@+id/iv_kresna_logo"
@@ -25,7 +25,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="48dp"
-        android:text="Mulai"
+        android:text="@string/mulai"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textAllCaps="false"
         android:background="@drawable/rounded_button_full_kresna_cream"
