--- a/app/src/main/res/layout/nilai_per_soal_row.xml
+++ b/app/src/main/res/layout/nilai_per_soal_row.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tv_soal_ke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Soal - n: "
+            android:text="@string/soal_n"
             android:textColor="@color/black"/>
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/tv_soal_ke"
-            android:text="10"
+            android:text="@string/angka_bold"
             android:textStyle="bold"
             android:textColor="@color/black"/>
     </LinearLayout>
